--- a/uj/.res/print.css
+++ b/uj/.res/print.css
@@ -21,14 +21,12 @@ body {
 /* ul { page-break-inside: avoid; } */
 /* li { page-break-inside: avoid; } */
 
-h1 {
-	margin-top: 0;
-}
-
 
 /* ==========================================================================
    Document specific styles
    ========================================================================== */
+
+h1 { margin-top: 0; }
 
 strong.correct { display: none; }
 
@@ -51,7 +49,7 @@ tr,
    ========================================================================== */
 
 .gallery li { display: block; }
-.gallery img { height: 90mm; max-width: auto; }
+.gallery img { height: 90mm; max-width: 100%; }
 .gallery object,
 .gallery video { height: 90mm; }
 
