--- a/uj/.res/print.css
+++ b/uj/.res/print.css
@@ -4,6 +4,7 @@
 
 h1{page-break-before:always}h1,h2,h3,h4,h5,h6{page-break-after:avoid}dl,ol,ul{page-break-before:avoid}
 
+
 /* ==========================================================================
    accessible.html
    ========================================================================== */
@@ -12,16 +13,20 @@ h1{page-break-before:always}h1,h2,h3,h4,h5,h6{page-break-after:avoid}dl,ol,ul{pa
 :visited { content:" ("attr(href)")"; }
 body {
 	font-family: serif;
-	font-size: 125%;
+	font-size: 126%;
 }
+
 
 /* ==========================================================================
    Document specific styles
    ========================================================================== */
 
+strong.correct { display: none; }
+
 tr,
 .exam-question { page-break-inside: avoid; }
 /* .exam-question > p { margin-bottom: 2.12em; } */
+
 
 /* Multimedia
    ========================================================================== */
