--- a/uj/.res/print.css
+++ b/uj/.res/print.css
@@ -13,8 +13,11 @@ h1{page-break-before:always}h1,h2,h3,h4,h5,h6{page-break-after:avoid}dl,ol,ul{pa
 :visited { content:" ("attr(href)")"; }
 body {
 	font-family: serif;
-	font-size: 150%;
+	font-size: 100%;
 }
+dl,
+ol,
+ul { page-break-inside: avoid; }
 
 
 /* ==========================================================================
@@ -31,11 +34,9 @@ tr,
 /* Multimedia
    ========================================================================== */
 
-.gallery img { height: 240px; }
+.gallery li { display: block; }
+.gallery img { height: 90mm; }
 .gallery object,
-.gallery video {
-	height: 240px;
-	width: 480px;
-}
+.gallery video { height: 90mm; }
 
 .youtube { display: none; }
