--- a/uj/.res/all.css
+++ b/uj/.res/all.css
@@ -72,6 +72,9 @@ ul {
 	column-count: 4;
 	column-gap: 1.5em;
 }
+.column-list-2 {
+	column-count: 2;
+}
 .table-of-contents { margin-left: 0; }
 .table-of-contents,
 .table-of-contents ul { list-style-type: none; }
