--- a/usercss/brave.user.css
+++ b/usercss/brave.user.css
@@ -2,12 +2,15 @@
 @name      brave.css
 @namespace https://twilczynski.com/usercss
 @author    tomasz86 <twilczynski@mailbox.org> (https://twilczynski.com)
-@version   1.0.0
+@version   1.0.1
 @updateURL https://twilczynski.com/usercss/brave.user.css
 ==/UserStyle== */
 
 @-moz-document domain("search.brave.com") {
 	:root {
 		--color-schemes-on-surface-variant: var(--color-primitive-neutral-0) !important;
+	}
+	.snippet-url {
+		color: var(--color-green-30) !important;
 	}
 }
