--- a/usercss/accessible.user.css
+++ b/usercss/accessible.user.css
@@ -1,8 +1,8 @@
 /* ==UserStyle==
 @name      accessible.css
 @namespace https://twilczynski.com/usercss
-@author    tomasz86 <twilczynski@naver.com> (https://twilczynski.com)
-@version   1.0.3
+@author    tomasz86 <twilczynski@mailbox.org> (https://twilczynski.com)
+@version   1.0.4
 @updateURL https://twilczynski.com/usercss/accessible.user.css
 ==/UserStyle== */
 
