--- a/usercss/startpage.user.css
+++ b/usercss/startpage.user.css
@@ -1,8 +1,8 @@
 /* ==UserStyle==
 @name      startpage.css
 @namespace https://twilczynski.com/usercss
-@author    tomasz86 <twilczynski@naver.com> (https://twilczynski.com)
-@version   1.0.2
+@author    tomasz86 <twilczynski@mailbox.org> (https://twilczynski.com)
+@version   1.0.3
 @updateURL https://twilczynski.com/usercss/startpage.user.css
 ==/UserStyle== */
 
