--- a/usercss/whatsapp.user.css
+++ b/usercss/whatsapp.user.css
@@ -1,8 +1,8 @@
 /* ==UserStyle==
 @name      whatsapp.css
 @namespace https://twilczynski.com/usercss
-@author    tomasz86 <twilczynski@naver.com> (https://twilczynski.com)
-@version   1.0.0
+@author    tomasz86 <twilczynski@mailbox.org> (https://twilczynski.com)
+@version   1.0.1
 @updateURL https://twilczynski.com/usercss/whatsapp.user.css
 ==/UserStyle== */
 
