--- a/viiilo/.res/all.css
+++ b/viiilo/.res/all.css
@@ -63,7 +63,10 @@ ul {
 	margin-left: 1.25em;
 	padding-left: 0;
 }
-.column-list { column-count: 4; }
+.column-list {
+	column-count: 4;
+	column-gap: 1.5em;
+}
 
 img {
 	border: 1px solid;
@@ -187,8 +190,8 @@ object { border: 1px solid rgb(0,0,0); }
 
 .home h2,
 .home .h2 {
-	border-top: 1px solid rgb(0,0,0);
-	padding-top: .75em;
+	/* border-top: 1px solid rgb(0,0,0); */
+	/* padding-top: .75em; */
 }
 .home h2.homework,
 .home .h2.homework {
