--- a/viiilo/.res/print.css
+++ b/viiilo/.res/print.css
@@ -31,6 +31,16 @@ tr,
 /* .exam-question > p { margin-bottom: 2.12em; } */
 
 
+/* Home page
+   ========================================================================== */
+
+.home h2,
+.home .h2 {
+	/* border-top: 0; */
+	/* padding-top: 0; */
+}
+
+
 /* Multimedia
    ========================================================================== */
 
