--- a/uj/.res/all.css
+++ b/uj/.res/all.css
@@ -19,14 +19,22 @@ address > hr { border: 0; }
 
 body { margin-bottom: .84em; }
 
-blockquote {
-	border: 1px solid rgb(0,0,0);
-	margin-left: 1.25em;
+/* blockquote { */
+	/* border: 1px solid rgb(0,0,0); */
+	/* margin-left: 1.25em; */
+/* } */
+/* blockquote > * { */
+	/* margin: 0; */
+	/* padding: 1.12em; */
+/* } */
+
+.bookquote {
+	font-style: italic;
+	margin-left: 0;
+	max-width: 30em;
 }
-blockquote > * {
-	margin: 0;
-	padding: 1.12em;
-}
+/* .bookquote > p:before { content: "“"; } */
+/* .bookquote > p:after { content: '”'; } */
 
 code,
 .code {
