--- a/viiilo/.res/print.css
+++ b/viiilo/.res/print.css
@@ -14,7 +14,7 @@ h1{page-break-before:always}h1,h2,h3,h4,h5,h6{page-break-after:avoid}
 :visited { content:" ("attr(href)")"; }
 body {
 	font-family: serif;
-	font-size: 100%;
+	font-size: 125%;
 }
 /* dl, */
 /* ol, */
@@ -25,6 +25,8 @@ body {
 /* ==========================================================================
    Document specific styles
    ========================================================================== */
+
+h1 { margin-top: 0; }
 
 strong.correct { display: none; }
 
@@ -47,7 +49,7 @@ tr,
    ========================================================================== */
 
 .gallery li { display: block; }
-.gallery img { height: 90mm; }
+.gallery img { height: 90mm; max-width: 100%; }
 .gallery object,
 .gallery video { height: 90mm; }
 
