--- a/viiilo/.res/print.css
+++ b/viiilo/.res/print.css
@@ -2,7 +2,8 @@
    Default style sheet for HTML 4
    ========================================================================== */
 
-h1{page-break-before:always}h1,h2,h3,h4,h5,h6{page-break-after:avoid}dl,ol,ul{page-break-before:avoid}
+h1{page-break-before:always}h1,h2,h3,h4,h5,h6{page-break-after:avoid}
+/* dl,ol,ul{page-break-before:avoid} */
 
 
 /* ==========================================================================
@@ -17,7 +18,8 @@ body {
 }
 dl,
 ol,
-ul { page-break-inside: avoid; }
+/* ul { page-break-inside: avoid; } */
+/* li { page-break-inside: avoid; } */
 
 
 /* ==========================================================================
