--- a/uj/.res/all.css
+++ b/uj/.res/all.css
@@ -190,8 +190,8 @@ object { border: 1px solid rgb(0,0,0); }
 
 .home h2,
 .home .h2 {
-	border-top: 1px solid rgb(0,0,0);
-	padding-top: .75em;
+	/* border-top: 1px solid rgb(0,0,0); */
+	/* padding-top: .75em; */
 }
 .home h2.homework,
 .home .h2.homework {
