--- a/uj/.res/print.css
+++ b/uj/.res/print.css
@@ -13,7 +13,7 @@ h1{page-break-before:always}h1,h2,h3,h4,h5,h6{page-break-after:avoid}dl,ol,ul{pa
 :visited { content:" ("attr(href)")"; }
 body {
 	font-family: serif;
-	font-size: 100%;
+	font-size: 150%;
 }
 dl,
 ol,
@@ -36,8 +36,8 @@ tr,
 
 .home h2,
 .home .h2 {
-	border-top: 0;
-	padding-top: 0;
+	/* border-top: 0; */
+	/* padding-top: 0; */
 }
 
 
